Revert to original data path

--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -102,8 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_hdf('~/lhcb_data/data.h5', key='LHCbMC_Lb')\n",
-    "df = pd.read_hdf('C:\\\\Users\\\\Alessandro\\\\Desktop\\\\Openlab\\\\nb\\\\data.h5', key='LHCbMC_Lb')"
+    "df = pd.read_hdf('~/lhcb_data/data.h5', key='LHCbMC_Lb')"
    ]
   },
   {
